<resources>
  <string name="app_name">MyWorkout</string>
  <string name="tab_text_1">Home</string>
  <string name="tab_text_2">Routine</string>
  <string name="tab_text_3">Exercises</string>
  <string name="tab_text_4">Muscles</string>

  <string name="login_failure_message">Unable to sign in with the provided credentials</string>
  <string name="title_activity_navigation">NavigationActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_log">Log Book</string>
  <string name="menu_exercises">Exercises</string>
  <string name="menu_muscles">Muscles</string>
  <string name="menu_routine">Routine</string>

  <string name="exercises_title">EXERCISES</string>

  <string name="muscles_title">MUSCLES</string>

  <string name="chest_prompt">CHEST</string>
  <string name="muscles_front_prompt">Front Muscles</string>

  <string-array name="muscles_anterior_array">
    <item>Anterior Deltoid</item>
    <item>Biceps Brachii</item>
    <item>Brachialis</item>
    <item>Obliquus Externus Abdominis</item>
    <item>Pectoralis Major</item>
    <item>Quadriceps Femoris</item>
    <item>Rectus Abdominis</item>
    <item>Serratus Anterior</item>
  </string-array>

  <string-array name="muscles_posterior_array">
    <item>Biceps Femoris</item>
    <item>Gastrocnemius</item>
    <item>Gluteus Maximus</item>
    <item>Latissimus Dorsi</item>
    <item>Posterior Deltoid</item>
    <item>Soleus</item>
    <item>Trapezius</item>
    <item>Triceps Brachii</item>
  </string-array>

  <string-array name="muscles_target_group">
    <item>CHEST</item>
    <item>UPPER BACK</item>
    <item>LOWER BACK</item>
    <item>ABS</item>
    <item>NECK</item>
    <item>SHOULDERS</item>
    <item>ARMS</item>
    <item>LOWER BODY</item>
  </string-array>

  <string-array name="exercises_chest_array">
    <item>Bench Press</item>
    <item>Bench Press, Decline</item>
    <item>Bench Press, Incline</item>
    <item>Bench Press, Reverse Grip</item>
    <item>Burpees</item>
    <item>Butterfly</item>
    <item>Cable Cross Over</item>
    <item>Pushup</item>
    <item>Pushup, Decline</item>
    <item>Pushup, Incline</item>
  </string-array>

  <string-array name="exercises_upper_back_array">
    <item>Rows</item>
  </string-array>

  <string-array name="exercises_lower_back_array">
    <item>LOWER BACK</item>
  </string-array>

  <string-array name="exercises_abs_array">
    <item>ABS</item>
  </string-array>

  <string-array name="exercises_neck_array">
    <item>NECK</item>
  </string-array>

  <string-array name="exercises_shoulders_array">
    <item>SHOULDERS</item>
  </string-array>

  <string-array name="exercises_arms_array">
    <item>ARMS</item>
  </string-array>

  <string-array name="exercises_lower_body_array">
    <item>LOWER BODY</item>
  </string-array>

</resources>