<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_camera"
      android:title="@string/menu_home"/>
    <item
      android:id="@+id/nav_profile"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/menu_profile"/>
    <item
      android:id="@+id/nav_log"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/menu_log"/>
    <item
      android:id="@+id/nav_routine"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/menu_routine"/>
    <item
      android:id="@+id/nav_exercises"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/menu_exercises"/>
    <item
    android:id="@+id/nav_muscles"
    android:icon="@drawable/ic_menu_slideshow"
    android:title="@string/menu_muscles"/>
  </group>
</menu>