<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="edu.cnm.deepdive.myworkout.controller.ui.home.HomeFragment"
    tools:layout="@layout/fragment_home"/>

  <fragment
    android:id="@+id/nav_profile"
    android:label="@string/menu_profile"
    android:name="edu.cnm.deepdive.myworkout.controller.ui.profile.ProfileFragment"
    tools:layout="@layout/fragment_profile"/>

  <fragment
    android:id="@+id/nav_log"
    android:label="@string/menu_log"
    android:name="edu.cnm.deepdive.myworkout.controller.ui.log.LogFragment"
    tools:layout="@layout/fragment_log"/>

  <fragment
    android:id="@+id/nav_routine"
    android:label="@string/menu_routine"
    android:name="edu.cnm.deepdive.myworkout.controller.ui.routine.RoutineFragment"
    tools:layout="@layout/fragment_routine"/>

  <fragment
    android:id="@+id/nav_exercises"
    android:label="@string/menu_exercises"
    android:name="edu.cnm.deepdive.myworkout.controller.ui.exercises.ExercisesFragment"
    tools:layout="@layout/fragment_exercises"/>

  <fragment
    android:id="@+id/nav_muscles"
    android:label="@string/menu_muscles"
    android:name="edu.cnm.deepdive.myworkout.controller.ui.muscles.MusclesFragment"
    tools:layout="@layout/fragment_muscles"/>



</navigation>